<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:gravity="center"
		android:layout_weight="1.0">

		<TextView
			android:text="..."
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/mainTextView1"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_marginBottom="10dp"
			android:textIsSelectable="true"/>

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp">

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:id="@+id/mainCheckBox1"
				android:text="@string/first_cap"
				android:layout_marginBottom="10dp"/>

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:id="@+id/mainCheckBox2"
				android:text="@string/all_cap"/>

			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/mainCheckBox3"
				android:checked="true"
				android:text="@string/doublev"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:gravity="center">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/length"
				android:id="@+id/mainTextView3"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_marginBottom="5dp"/>

			<SeekBar
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/mainSeekBar1"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:gravity="center">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/first_lett"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_marginRight="5dp"/>

			<Spinner
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/mainSpinner2"/>

		</LinearLayout>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/generate"
			android:id="@+id/mainButton1"/>

	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="© Maximoff, 2020"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:id="@+id/mainTextView2"
		android:layout_gravity="center_horizontal"
		android:padding="3dp"/>

</LinearLayout>

